--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "@next/font": "^13.5.4",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
-    "@types/react-dom": "^18.3.0",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^11.0.25",
-    "next": "14.1.4",
+    "next": "^14.2.7",
     "postcss": "^8.4.43",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,7 +30,11 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "@types/json5": "^2.2.0",
+    "@types/next": "^9.0.0",
     "@types/node": "^22.5.2",
-    "@types/react": "^18.3.5"
+    "@types/prop-types": "^15.7.12",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0"
   }
 }
