--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "strictNullChecks": true, // Enable for better type safety
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
@@ -25,7 +26,8 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "types": ["node", "react", "react-dom", "next"]
   },
   "include": [
     "next-env.d.ts",
